<resources>
    <string name="app_name">Netclan Explorer Clone</string>
    <string name="refine">Refine</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="select">Select Your Availability</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save &amp; Explore</string>


</resources>