<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/refine"
        android:icon="@drawable/refine"
        android:title="@string/refine"
        android:enabled="true"/>
    <item
        android:id="@+id/explore"
        android:icon="@drawable/explore"
        android:title="@string/explore"
        android:enabled="true"/>
    <item
        android:id="@+id/network"
        android:icon="@drawable/network"
        android:title="@string/network"
        android:enabled="true"/>
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat"
        android:title="@string/chat"
        android:enabled="true"/>
    <item
        android:id="@+id/contacts"
        android:icon="@drawable/contacts"
        android:title="@string/contacts"
        android:enabled="true"/>
</menu>